Made homepage gallery buttons use the first image in their category as the background; fixed artist portrait scaling on mobile

--- a/rebecca-becker-portraits.less
+++ b/rebecca-becker-portraits.less
@@ -137,10 +137,11 @@ hr {
 }
 
 .bio-img {
-  background-image: url('http://res.cloudinary.com/bhirsch-cloud/image/upload/c_fit,h_400,r_max,w_400/v1467150419/rebecca-becker/JR_Rebecca_photo.png');
+  background-image: url('http://res.cloudinary.com/bhirsch-cloud/image/upload/c_fit,h_800,r_max,w_800/v1467150419/rebecca-becker/JR_Rebecca_photo.png');
   // background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: contain;
   width: 400px;
   height: 400px;
   // border-radius: 100%;
